cmake_minimum_required(VERSION 3.21)
project(prj)
find_package( OpenCV REQUIRED )
set(CMAKE_CXX_STANDARD 14)
add_library(qh quickhull/QuickHull.hpp quickhull/QuickHull.cpp)
add_library(lb libprj.h libprj.cpp)
include_directories(nlopt-2.7.1)
include_directories( ${OpenCV_INCLUDE_DIRS})
add_executable(prj main.cpp)
target_link_libraries( prj ${OpenCV_LIBS} ${NLOPT_LIBRARIES} qh lb nlopt)
target_link_libraries( lb qh)